# Snapnotes

./: .env  .env.example  .gitignore  LICENSE  README.md  README_CN.md  any2md.py  pdf2md.py  pyproject.toml  requirements.txt  test_api_connectivity.py  test_qwen_localization.py
output/: 2003年考研数学_一_真题.md
resources/test_ppt/: 第三章数值实验实例.PPT  第三章数值实验实例.pptx
